# dbtvertexaiagent

./: CLAUDE.md  README.md  agent.py  deploy.py  pyproject.toml
config/prompts/: scoped_rules.json
docs/: local-development.md  local-orchestrator-mode.md
docs/brainstorms/: 2026-04-05-local-orchestrator-remote-model-requirements.md  2026-04-05-vertex-ai-dbt-review-agent-requirements.md  2026-04-06-dbt-review-architecture-notes.md  2026-04-06-debug-mode-and-rule-framework-requirements.md  2026-04-06-prompt-guidance-config-requirements.md  2026-04-06-structure-and-python-tooling-requirements.md  2026-04-12-unified-adk-review-architecture-requirements.md
docs/plans/: 2026-04-05-001-feat-vertex-dbt-review-agent-plan.md  2026-04-05-002-feat-local-http-orchestrator-plan.md  2026-04-06-003-feat-debug-mode-and-rule-framework-plan.md  2026-04-06-004-feat-prompt-guidance-config-plan.md  2026-04-06-005-feat-structure-and-python-tooling-plan.md  2026-04-12-001-refactor-unified-adk-review-architecture-plan.md
src/dbt_vertex_agent/: __init__.py  __main__.py  agent.py  cli.py  config.py  context_builder.py  http_client.py  manifest_analysis.py  model_client.py  models.py  output.py  packaging.py  prompt_guidance.py  prompting.py  remote.py  rendering.py  review_contract.py  (+8 more)
src/dbt_vertex_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_agent.py  test_cli.py  test_config.py  test_http_client.py  test_manifest_analysis.py  test_model_client.py  test_packaging.py  test_prompt_guidance.py  test_remote.py  test_rendering.py  test_review_contract.py  test_review_policy.py  test_service.py  test_service_contract.py  test_source_reader.py  test_storage.py
(+24 files in other folders)
