[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dbt-vertex-agent"
version = "0.1.0"
description = "Local CLI and Vertex AI agent runtime for reviewing dbt projects"
requires-python = ">=3.11,<3.14"

[project.optional-dependencies]
gcp = [
  "google-adk",
  "google-cloud-aiplatform[adk,agent_engines]>=1.111",
  "google-cloud-storage>=2.16",
  "google-genai>=1.0.0",
]

[project.scripts]
dbt-vertex-agent = "dbt_vertex_agent.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
